Grammar.txt

Program						->	Expression							| ε
Expression 					->	Declaration 						| Sequence
							  | Declaration Expression				| Sequence Expression
Declaration					->	Identifier Colon String				| Identifier Colon String Expression
Sequence					->	LeftSequence						| LeftSequence Expression
							  | RightSequence						| RightSequence Expression
LeftSequence				->	Identifier LeftArrow Identifier 	| Identifier LeftArrow Identifier String
RightSequence				->	Identifier RightArrow Identifier	| Identifier RightArrow Identifier String


Identifier					->	"[_a-zA-Z][_a-zA-Z0-9]*"
String						->	"\"([^\\\"]|\\.)*\""
Colon						->	":"
RightArrow					->	"->"
LeftArrow					->	"<-"
WhiteSpace					->	"[ \t\r]+"
